# league-of-patches-cassiopeia

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: classify.py  health.py
app/db/: mongo.py
app/llm/: anthropic_provider.py  base.py  dependencies.py  exceptions.py  schemas.py
tests/: conftest.py  test_anthropic_provider.py  test_classify.py
