[project]
name = "league-of-patches-cassiopeia"
version = "0.1.0"
description = "FastAPI service that scrapes League of Legends patch notes and classifies them via an LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]>=0.34.0",
    "pymongo>=4.10.0",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx2>=2.5.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
